objects/Robot_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <label>Day of the Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Robot Setups</relationshipLabel>
        <relationshipName>Robot_Setups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <displayFormat>ROBOT SETUP-{0000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </fields>
    <label>Robot Setup</label>
    <nameField>
        <displayFormat>ROBOT SETUP-{0000}</displayFormat>
        <label>Robot Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Robot Setups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>